--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^0.1.3  
+  cupertino_icons: ^0.1.3
   bloc: ^3.0.0
   equatable: ^1.1.1
   flutter_bloc: ^3.2.0
@@ -56,9 +56,9 @@ flutter:
     - family: FactionIcons
       fonts:
         - asset: assets/icons/FactionIcons.ttf
-    - family: SyndicateIcons
+    - family: SyndicateGlyphs
       fonts:
-        - asset: assets/icons/SyndicateIcons.ttf
+        - asset: assets/icons/SyndicateGlyphs.ttf
   assets:
     - assets/icons/
     - assets/wfcd_banner.svg
