--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,15 @@ dependencies:
   wfcd_client:
     path: packages/wfcd_client
   equatable: ^1.1.1
-  bloc: ^3.0.0
-  flutter_bloc: ^3.0.0
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^3.1.0
+  hydrated_bloc: ^4.0.0
   intl: ^0.16.1
-  package_info: ^0.4.0+14
-  firebase_messaging: ^6.0.9
-  cached_network_image: ^2.2.0
+  package_info: ^0.4.0+18
+  firebase_messaging: ^6.0.15
+  cached_network_image: ^2.2.0+1
   flutter_svg: ^0.17.4
   floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.2
@@ -34,7 +34,7 @@ dependencies:
   lumberdash: ^2.1.1
   colorize_lumberdash: ^2.1.0
   supercharged: ^1.5.1
-  dartz: ^0.9.0
+  dartz: ^0.9.1
   breakpoint: ^1.0.1+2
   flutter_staggered_grid_view: ^0.3.0
 
@@ -43,7 +43,7 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: ^1.14.2
+  test: ^1.14.3
   mockito: ^4.1.1
   extra_pedantic: ^1.2.0
   intl_translation: ^0.17.9
