--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dartz: ^0.9.1
   breakpoint: ^1.0.1+2
   flutter_staggered_grid_view: ^0.3.0
+  supercharged: ^1.5.1
 
 dev_dependencies:
   flutter_test:
