--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  bloc: ^3.0.0
+  bloc: ^4.0.0
   equatable: ^1.1.1
-  flutter_bloc: ^3.2.0
+  flutter_bloc: ^4.0.0
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^3.1.0
+  hydrated_bloc: ^4.0.0
   intl: ^0.16.0
   intl_translation: ^0.17.7
   package_info: ^0.4.0+17
@@ -28,7 +28,7 @@ dependencies:
   worldstate_api_model:
     git: https://github.com/SlayerOrnstein/worldstate_model.git
   hive: ^1.1.1
-  hive_flutter: ^0.2.1
+  hive_flutter: ^0.3.0+2
   implicitly_animated_reorderable_list: ^0.2.1
 
 dev_dependencies:
@@ -37,7 +37,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: ^1.6.3
-  bloc_test: ^4.0.0
+  bloc_test: ^5.1.0
   mockito: ^4.1.1
 
 flutter:
