ported icons from N2 to master

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,10 @@ flutter:
     - family: FactionIcons
       fonts:
         - asset: assets/icons/FactionIcons.ttf
-    - family: SyndicateIcons
+    - family: SyndicateGlyphs
       fonts:
-        - asset: assets/icons/SyndicateIcons.ttf
+        - asset: assets/icons/SyndicateGlyphs.ttf
+
   assets:
     - assets/icons/
     - assets/wfcd_banner.svg
