travis: run deploy builds with --tree-shake-icons

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ jobs:
       if: tag IS present
       script:
         - flutter clean
-        - flutter build apk --split-per-abi
-        - flutter build appbundle
+        - flutter build apk --split-per-abi --tree-shake-icons
+        - flutter build appbundle --tree-shake-icons
         - cd android && bundle exec fastlane beta
       deploy:
         provider: releases
