--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,12 +41,11 @@ android {
     }
 
     defaultConfig {
-        applicationId 'com.cephalon.navis'
+        applicationId "com.cephalon.navis"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName + getDate()
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -81,9 +80,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
 static def getDate() {
