--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
-
+android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
-# extra-gen-snapshot-options=--obfuscate
-android.enableR8.fullMode=true
