This is a test commit to see if tree shaking icons is what's causing gradle daemon to disappear in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Test
       script:
         - flutter test
-        - flutter build apk --target-platform android-arm
+        - flutter build apk --target-platform=android-arm --tree-shake-icons
     - name: Deploy
       if: tag IS present
       script:
