Revert "This is a test commit to see if tree shaking icons"
Bug in flutter SDK #55417

This reverts commit 7aae5f1987ac157b40b3c43bde88f0e977d6a676.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Test
       script:
         - flutter test
-        - flutter build apk --target-platform=android-arm --tree-shake-icons
+        - flutter build apk --target-platform android-arm
     - name: Deploy
       if: tag IS present
       script:
