--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,12 @@ dependencies:
   flutter_bloc: ^4.0.0
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^4.0.0
+  hydrated_bloc: ^4.1.0
   intl: ^0.16.1
   package_info: ^0.4.0+18
-  firebase_messaging: ^6.0.15
+  firebase_messaging: ^6.0.16
   cached_network_image: ^2.2.0+1
   flutter_svg: ^0.17.4
-  floating_search_bar: ^0.3.0
   flutter_sticky_header: ^0.4.2
   hive: ^1.4.1+1
   get_it: ^4.0.2
@@ -35,6 +34,7 @@ dependencies:
   breakpoint: ^1.0.1+2
   flutter_staggered_grid_view: ^0.3.0
   supercharged: ^1.6.0
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
