--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  worldstate_api_model:
-    git: https://github.com/SlayerOrnstein/worldstate_model.git
-  warframe_items_model:
-    git: https://github.com/SlayerOrnstein/warframe_item_models.git
-  equatable: ^1.1.1
+  warframestat_api_models:
+    git: https://github.com/SlayerOrnstein/warframestat_api_models.git
+  equatable: ^1.2.0
   bloc: ^4.0.0
   flutter_bloc: ^4.0.0
   firebase_crashlytics: ^0.1.3+3
@@ -26,7 +24,7 @@ dependencies:
   hive: ^1.4.1+1
   get_it: ^4.0.2
   data_connection_checker: ^0.3.4
-  youtube_explode_dart: ^0.0.16
+  youtube_explode_dart: ^0.0.17
   chewie: ^0.9.10
   dartz: ^0.9.1
   breakpoint: ^1.0.1+2
