Revert "chore: updated splashscreens"
This reverts commit 64c0e2a9862d1224be35aa32f74166e090774808.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,5 +75,5 @@ flutter_intl:
   class_name: NavisLocalizations
 
 flutter_native_splash:
-  image: assets/navis_icon.png
+  image: assets/nightmare.png
   color: "FFFFFF"
