--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/enemys/Corpus/
     - assets/enemys/Infestation/
     - assets/Derelict.webp
+    - assets/skyboxes/Void.webp
     # - assets/skyboxes/
     #- assets/maps/
     #- assets/maps/imgs/
