--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.6.1+78
+version: 1.6.5+82
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  cupertino_icons: ^0.1.3
   bloc: ^4.0.0
-  equatable: ^1.2.0
+  equatable: ^1.1.1
   flutter_bloc: ^4.0.0
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
@@ -37,6 +38,7 @@ dev_dependencies:
   test: ^1.6.3
   bloc_test: ^5.1.0
   mockito: ^4.1.1
+  flutter_native_splash: ^0.1.9
 
 flutter:
   uses-material-design: true
@@ -56,7 +58,6 @@ flutter:
     - family: SyndicateGlyphs
       fonts:
         - asset: assets/icons/SyndicateGlyphs.ttf
-
   assets:
     - assets/icons/
     - assets/wfcd_logo_color.svg
@@ -73,3 +74,8 @@ flutter:
 flutter_intl:
   enabled: true
   class_name: NavisLocalizations
+
+flutter_native_splash:
+  image: assets/nightmare.png
+  color: "FFFFFF"
+  android: false
