chore(travis): remove tree shake icons

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,8 +97,8 @@ matrix:
           lib/l10n/intl_*.arb
       script:
         - flutter clean
-        - flutter build apk --split-per-abi --tree-shake-icons
-        - flutter build appbundle --tree-shake-icons
+        - flutter build apk --split-per-abi
+        - flutter build appbundle
         - cd android && bundle exec fastlane beta
       deploy:
         provider: releases
