--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,8 +48,12 @@
 	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIStatusBarHidden</key>
 	<true/>
-
 </dict>
 </plist>
