--- a/.travis.yml
+++ b/.travis.yml
@@ -36,14 +36,13 @@ matrix:
         - nvm install --lts
         - if [  ! -d "flutter" ] ; then git clone https://github.com/flutter/flutter.git
           -b 1.17.3; fi;
-        - export PATH="$PATH":"./flutter/bin"
-        - export PATH="$PATH":"./flutter/bin/cache/dart-sdk/bin"
+        - export PATH=./flutter/bin:$PATH
         - export PATH="$PATH":"$HOME/.pub-cache/bin"
       install:
         - npm install -g semantic-release
         - npm install -g @semantic-release/exec
         - npm install -g @semantic-release/git
-        - pub global activate pubspec_version
+        - flutter pub pub global activate pubspec_version
       script:
         - semantic-release
     - os: linux
