--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
       os: linux
       env: JOB=semantic-releases
       if: branch = master && type NOT IN (pull_request)
-      before_install:
+      install:
         - nvm install --lts
         - export PATH="$PATH:$HOME/.pub-cache/bin"
       install:
