--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
       os: linux
       env: JOB=semantic-releases
       if: branch = master && type NOT IN (pull_request)
-      install:
+      before_install:
         - nvm install --lts
         - export PATH="$PATH:$HOME/.pub-cache/bin"
       install:
