--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,10 @@ matrix:
         apt:
           update: true
           sources:
-            - sourceline: "https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_stable.list"
+            - sourceline: "deb [arch=amd64] https://storage.googleapis.com/download.dartlang.org/linux/debian stable main"
               key_url: "https://dl-ssl.google.com/linux/linux_signing_key.pub"
           packages:
+            - apt-transport-https
             - dart
       before_install:
         - nvm install --lts
