chore(travis): export dart binaries

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ matrix:
             - dart
       before_install:
         - nvm install --lts
+        - export PATH="$PATH:/usr/lib/dart/bin"
         - export PATH="$PATH:$HOME/.pub-cache/bin"
       install:
         - npm install -g semantic-release
