--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: navis
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-version: 1.6.7+84
+version: 2.0.0+95
 
 dependencies:
   flutter:
@@ -30,7 +30,7 @@ dependencies:
   dartz: ^0.9.1
   flutter_staggered_grid_view: ^0.3.0
   supercharged: ^1.6.0
-  font_awesome_flutter: ^8.8.1
+  flutter_brand_icons: ^1.1.0
 
 dev_dependencies:
   flutter_test:
