--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,6 @@ matrix:
         - npm install -g @semantic-release/git
         - pub global activate pubspec_version
         - chmod +x deploy.sh
-        - export PATH="$PATH:$FLUTTER_SDK_PATH/cache/dart-sdk/bin"
       script:
         - semantic-release
     - os: linux
@@ -100,7 +99,7 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
-      before_install:
+      install:
         - bundle install --gemfile=android/Gemfile
       script:
         - flutter clean
@@ -124,7 +123,7 @@ matrix:
       os: osx
       osx_image: xcode11.5
       language: swift
-      before_install:
+      install:
         - echo -e "machine github.com\n  login $GIT_TOKEN" >> ~/.netrc
         - bundle install --gemfile=ios/Gemfile
       before_script:
