--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,20 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   supercharged: ^1.6.0
   flutter_brand_icons: ^1.1.0
+  warframestat_api_models:
+    git: https://github.com/SlayerOrnstein/warframestat_api_models.git
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
+dev_dependencies:
   test: ^1.14.3
   mockito: ^4.1.1
   extra_pedantic: ^1.2.0
   intl_translation: ^0.17.9
-  warframestat_api_models:
-    git: https://github.com/SlayerOrnstein/warframestat_api_models.git
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
