--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,10 @@ name: navis
 version: 1.8.2+91
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
 dependencies:
+  flutter:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^0.1.3
   bloc: ^4.0.0
   flutter_bloc: ^4.0.1
@@ -25,10 +29,8 @@ dependencies:
   flutter_brand_icons: ^1.1.0
   warframestat_api_models:
     git: https://github.com/SlayerOrnstein/warframestat_api_models.git
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  wfcd_client:
+    git: https://github.com/SlayerOrnstein/wfcd_client.git
 
 dev_dependencies:
   test: ^1.14.3
