--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  bloc: ^5.0.0
-  flutter_bloc: ^5.0.0
+  bloc: ^5.0.1
+  flutter_bloc: ^5.0.1
   firebase_crashlytics: ^0.1.3+3
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^5.0.0
+  hydrated_bloc: ^5.0.3
   intl: ^0.16.1
   package_info: ^0.4.0+18
   firebase_messaging: ^6.0.16
@@ -21,11 +21,11 @@ dependencies:
   hive: ^1.4.1+1
   get_it: ^4.0.2
   data_connection_checker: ^0.3.4
-  youtube_explode_dart: ^1.3.3
+  youtube_explode_dart: ^1.4.1+1
   chewie: ^0.9.10
   dartz: ^0.9.1
   flutter_staggered_grid_view: ^0.3.0
-  supercharged: ^1.6.0
+  supercharged: ^1.7.0
   flutter_brand_icons: ^1.1.0
   warframestat_api_models:
     git: https://github.com/SlayerOrnstein/warframestat_api_models.git
@@ -59,7 +59,7 @@ flutter:
       fonts:
         - asset: assets/icons/SyndicateGlyphs.ttf
   assets:
-    - assets/wfcd_banner.svg
+    # - assets/wfcd_banner.svg
     - assets/Derelict.webp
     - assets/skyboxes/Void.webp
     - assets/event_info.json
