fix(build): add build-tools 29.0.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
+          - build-tools-29.0.3
+          - android-29
       script:
         - flutter pub get
         - flutter test
@@ -77,6 +79,8 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
+          - build-tools-29.0.3
+          - android-29
       script:
         - flutter build apk --target-platform android-arm
     - os: osx
@@ -98,6 +102,8 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
+          - build-tools-29.0.3
+          - android-29
       install:
         - bundle install --gemfile=android/Gemfile
       script:
