--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,24 +10,24 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   bloc: ^6.0.1
   equatable: ^1.2.2
   flutter_bloc: ^6.0.0
-  firebase_crashlytics: ^0.1.3+3
+  firebase_crashlytics: ^0.2.1
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^6.0.0
   intl: ^0.16.1
   intl_translation: ^0.17.7
   package_info: ^0.4.0+17
-  firebase_messaging: ^7.0.0
+  firebase_messaging: ^7.0.2
   cached_network_image: ^2.2.0+1
-  flutter_svg: ^0.18.0
-  flutter_sticky_header: ^0.4.2
-  hive: ^1.4.1+1
-  get_it: ^4.0.2
+  flutter_svg: ^0.19.0
+  flutter_sticky_header: ^0.5.0
+  hive: ^1.4.4+1
+  get_it: ^5.0.1
   data_connection_checker: ^0.3.4
-  youtube_explode_dart: ^1.4.1+1
+  youtube_explode_dart: ^1.5.2
   chewie: ^0.9.10
   dartz: ^0.9.1
   flutter_staggered_grid_view: ^0.3.1
@@ -37,14 +37,14 @@ dependencies:
     git: https://github.com/SlayerOrnstein/warframestat_api_models.git
   wfcd_client:
     git: https://github.com/SlayerOrnstein/wfcd_client.git
-  responsive_builder: ^0.2.0+2
-  flutter_local_notifications: ^1.4.4+3
+  responsive_builder: ^0.3.0
+  flutter_local_notifications: ^1.4.4+5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.14.3
-  mockito: ^4.1.1
+  mockito: ^4.1.2
   extra_pedantic: ^1.2.0
 
 flutter:
