chore: firebase_core is needed now

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,7 @@ android {
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -82,6 +83,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 apply plugin: 'io.fabric'
