--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   bloc: ^6.0.1
   equatable: ^1.2.2
   flutter_bloc: ^6.0.0
+  firebase_core: ^0.5.0
   firebase_crashlytics: ^0.2.1
   flutter_custom_tabs: ^0.6.0
   hydrated_bloc: ^6.0.0
