--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ matrix:
       if: NOT tag IS present
       android:
         components:
+          - build-tools-28.0.3
+          - android-28
           - build-tools-29.0.3
           - android-29
       script:
@@ -73,6 +75,8 @@ matrix:
       if: NOT tag IS present
       android:
         components:
+          - build-tools-28.0.3
+          - android-28
           - build-tools-29.0.3
           - android-29
       script:
@@ -95,6 +99,8 @@ matrix:
       dist: xenial
       android:
         components:
+          - build-tools-28.0.3
+          - android-28
           - build-tools-29.0.3
           - android-29
       install:
