chore: update firebase deps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,70 +1,63 @@
 name: navis
 version: 1.11.5+105
 description: Cephalon Navis is an Android app inspired by Warframe Hub.
-dependencies: 
-  cupertino_icons: ^1.0.0
+enviroment:
+  sdk: ">=2.10.0 < 3.0.0"
+dependencies:
+  flutter:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  warframestat_api_models:
+    git: https://github.com/SlayerOrnstein/warframestat_api_models.git
+  wfcd_client:
+    git: https://github.com/SlayerOrnstein/wfcd_client.git
   bloc: ^6.0.1
+  cached_network_image: ^2.2.0+1
+  cupertino_icons: ^1.0.0
   equatable: ^1.2.2
-  flutter_bloc: ^6.0.1
-  firebase_crashlytics: ^0.1.3+3
+  firebase_core: ^0.5.0+1
+  firebase_crashlytics: ^0.2.1+1
+  firebase_messaging: ^7.0.3
+  floating_search_bar: ^0.3.0
+  flutter_bloc: ^6.0.6
+  flutter_brand_icons: ^1.1.0
   flutter_custom_tabs: ^0.6.0
-  hydrated_bloc: ^6.0.1
+  flutter_sticky_header: ^0.5.0
+  flutter_svg: ^0.19.0
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.0+2
+  hydrated_bloc: ^6.0.2
   intl: ^0.16.0
   intl_translation: ^0.17.7
   package_info: ^0.4.0+17
-  firebase_messaging: ^7.0.0
-  cached_network_image: ^2.2.0+1
-  flutter_svg: ^0.19.0
-  floating_search_bar: ^0.3.0
-  flutter_sticky_header: ^0.5.0
-  hive: ^1.1.1
-  hive_flutter: ^0.3.0+2
-  flutter_brand_icons: ^1.1.0
-  flutter: 
+dev_dependencies:
+  flutter_driver:
     sdk: flutter
-  flutter_localizations: 
+  flutter_test:
     sdk: flutter
-  wfcd_client: 
-    git: https://github.com/SlayerOrnstein/wfcd_client.git
-  warframestat_api_models: 
-    git: https://github.com/SlayerOrnstein/warframestat_api_models.git
-dev_dependencies: 
-  test: ^1.6.3
   bloc_test: ^7.0.0
-  mockito: ^4.1.1
   flutter_native_splash: ^0.1.9
-  flutter_test: 
-    sdk: flutter
-  flutter_driver: 
-    sdk: flutter
-flutter: 
-  fonts: 
-    - 
-      family: AppIcons
-      fonts: 
-        - 
-          asset: assets/icons/AppIcons.ttf
-    - 
-      family: PlatformIcons
-      fonts: 
-        - 
-          asset: assets/icons/PlatformIcons.ttf
-    - 
-      family: RelicIcons
-      fonts: 
-        - 
-          asset: assets/icons/RelicIcons.ttf
-    - 
-      family: FactionIcons
-      fonts: 
-        - 
-          asset: assets/icons/FactionIcons.ttf
-    - 
-      family: SyndicateGlyphs
-      fonts: 
-        - 
-          asset: assets/icons/SyndicateGlyphs.ttf
-  assets: 
+  mockito: ^4.1.1
+  test: ^1.6.3
+flutter:
+  fonts:
+    - family: AppIcons
+      fonts:
+        - asset: assets/icons/AppIcons.ttf
+    - family: PlatformIcons
+      fonts:
+        - asset: assets/icons/PlatformIcons.ttf
+    - family: RelicIcons
+      fonts:
+        - asset: assets/icons/RelicIcons.ttf
+    - family: FactionIcons
+      fonts:
+        - asset: assets/icons/FactionIcons.ttf
+    - family: SyndicateGlyphs
+      fonts:
+        - asset: assets/icons/SyndicateGlyphs.ttf
+  assets:
     - assets/icons/
     - assets/wfcd_logo_color.svg
     - assets/enemys/Corrupted/
@@ -74,10 +67,10 @@ flutter:
     - assets/Derelict.webp
     - assets/skyboxes/Void.webp
   uses-material-design: true
-flutter_intl: 
+flutter_intl:
   class_name: NavisLocalizations
   enabled: true
-flutter_native_splash: 
+flutter_native_splash:
   image: assets/nightmare.png
   color: FFFFFF
   android: false
