chore(travis): add android-30 components

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ matrix:
           - android-28
           - build-tools-29.0.3
           - android-29
+          - android-30
       script:
         - flutter pub get
         - flutter test
@@ -81,6 +82,7 @@ matrix:
           - android-28
           - build-tools-29.0.3
           - android-29
+          - android-30
       script:
         - flutter build apk --target-platform android-arm
     - os: osx
