--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ matrix:
       android:
         components:
           - build-tools-28.0.3
-          # - android-28
+          - android-28
       before_script:
         - yes | sdkmanager "platforms;android-30"
       script:
@@ -99,10 +99,9 @@ matrix:
         components:
           - build-tools-28.0.3
           - android-28
-          - build-tools-29.0.3
-          - android-29
       install:
         - bundle install --gemfile=android/Gemfile
+        - yes | sdkmanager "platforms;android-30"
       script:
         - flutter clean
         - flutter build appbundle
