--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,31 +6,32 @@ environment:
   sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
   bloc: ^6.0.1
   cached_network_image: ^2.2.0+1
   chewie: ^0.9.10
-  data_connection_checker: ^0.3.4
   dartz: ^0.9.1
+  data_connection_checker: ^0.3.4
   equatable: ^1.2.2
-  flutter_brand_icons: ^1.1.0
   firebase_core: ^0.5.0
-  firebase_messaging: ^7.0.2
   firebase_crashlytics: ^0.2.1
+  firebase_messaging: ^7.0.2
+  flutter:
+    sdk: flutter
   flutter_bloc: ^6.0.0
+  flutter_brand_icons: ^1.1.0
   flutter_custom_tabs: ^0.6.0
   flutter_local_notifications: ^2.0.0+1
+  flutter_localizations:
+    sdk: flutter
   flutter_staggered_grid_view: ^0.3.1
   flutter_sticky_header: ^0.5.0
   flutter_svg: ^0.19.0
+  get_it: ^5.0.1
   hive: ^1.4.4+1
   hydrated_bloc: ^6.0.0
+  image: ^2.1.18
   intl: ^0.16.1
   intl_translation: ^0.17.7
-  get_it: ^5.0.1
   package_info: ^0.4.0+17
   responsive_builder: ^0.3.0
   supercharged: ^1.7.0
@@ -41,9 +42,9 @@ dependencies:
   youtube_explode_dart: ^1.5.2
 
 dev_dependencies:
+  extra_pedantic: ^1.2.0
   flutter_test:
     sdk: flutter
-  extra_pedantic: ^1.2.0
   mockito: ^4.1.2
   test: ^1.14.3
 
@@ -68,7 +69,7 @@ flutter:
         - asset: assets/icons/SyndicateGlyphs.ttf
   assets:
     - assets/Derelict.webp
-    - assets/skyboxes/Void.webp
     - assets/event_info.json
     - assets/wfcd_logo_color.svg
     - assets/skybox_nodes.json
+    - assets/mod_frames/
