chore: begin migration to github actions

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ ios/Runner.ipa
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+android/app/google-service.txt
+android/keystore.txt
