--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,10 +25,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-def keystorePropertiesFile = rootProject.file("key.properties")
-def keystoreProperties = new Properties()
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
 android {
     compileSdkVersion 30
 
@@ -41,7 +37,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.cephalon.navis"
         minSdkVersion 16
         targetSdkVersion 30
@@ -52,10 +47,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
+            storeFile file("../keystore.jks")
+            storePassword "$System.env.TENNO_CIPHER"
+            keyAlias "upload"
+            keyPassword "$System.env.TENNO_CIPHER"
         }
     }
 
