--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,19 +7,20 @@ on:
     branches:
       - master
 runs-on: ubuntu-latest
-steps:
-  - uses: actions/checkout@v1
-  - uses: actions/setup-java@v1
-    with:
-      java-version: "12.x"
-  - uses: subosito/flutter-action@v1.1.1
-    env:
-      TENNO_CIPHER: ${{ secrets.TENNO_CIPHER }}
-      TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
-      TENNO_STORE: ${{ secrets.TENNO_STORE }}
-  - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
-  - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
-  - run: flutter pub get
-  - run: flutter analyze
-  - run: flutter test
-  - run: flutter build apk --release
+jobs:
+  steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: "12.x"
+    - uses: subosito/flutter-action@v1.1.1
+      env:
+        TENNO_CIPHER: ${{ secrets.TENNO_CIPHER }}
+        TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
+        TENNO_STORE: ${{ secrets.TENNO_STORE }}
+    - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
+    - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
+    - run: flutter pub get
+    - run: flutter analyze
+    - run: flutter test
+    - run: flutter build apk --release
