--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,16 +11,17 @@ env:
   TENNO_FIREBASE: ${{ secrets.TENNO_FIREBASE }}
   TENNO_STORE: ${{ secrets.TENNO_STORE }}
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
-    - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: "12.x"
-    - uses: subosito/flutter-action@v1.1.1
-    - run: flutter pub get
-    - run: flutter analyze
-    - run: flutter test
-    - run: flutter build apk --release
+  unit_test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
+      - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1.1.1
+      - run: flutter pub get
+      - run: flutter analyze
+      - run: flutter test
+      - run: flutter build apk --release
