--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,13 @@ jobs:
   unit_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
-      - uses: subosito/flutter-action@v1.1.1
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: stable
       - run: echo $TENNO_STORE | openssl base64 -d -out android/keystore.jks
       - run: echo $TENNO_FIREBASE | openssl base64 -d -out android/app/google-services.json
       - run: flutter pub get
